<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-24 Paranoid Android
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/dolby_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:defaultValue="true"
        android:key="dolby_enable"
        android:title="@string/dolby_enable" />

    <ListPreference
        android:key="dolby_profile"
        android:entries="@array/dolby_profile_entries"
        android:entryValues="@array/dolby_profile_values"
        android:defaultValue="0"
        android:title="@string/dolby_profile_title"
        android:summary="%s"
        android:icon="@drawable/ic_dolby" />

    <PreferenceCategory
        android:key="dolby_category_settings"
        android:title="@string/dolby_category_settings">

        <Preference
            android:key="dolby_preset"
            android:title="@string/dolby_preset">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="co.aospa.dolby"
                android:targetClass="co.aospa.dolby.geq.EqualizerActivity" />
        </Preference>

        <co.aospa.dolby.preference.DolbyIeqPreference
            android:key="dolby_ieq"
            android:entries="@array/dolby_ieq_entries"
            android:entryValues="@array/dolby_ieq_values"
            android:title="@string/dolby_ieq" />

        <SwitchPreferenceCompat
            android:key="dolby_spk_virtualizer"
            android:title="@string/dolby_spk_virtualizer" />

        <SwitchPreferenceCompat
            android:key="dolby_virtualizer"
            android:title="@string/dolby_hp_virtualizer" />

        <ListPreference
            android:key="dolby_stereo"
            android:entries="@array/dolby_stereo_entries"
            android:entryValues="@array/dolby_stereo_values"
            android:title="@string/dolby_stereo_widening"
            android:dependency="dolby_virtualizer" />

        <ListPreference
            android:key="dolby_dialogue"
            android:entries="@array/dolby_dialogue_entries"
            android:entryValues="@array/dolby_dialogue_values"
            android:title="@string/dolby_dialogue_enhancer" />

        <SwitchPreferenceCompat
            android:key="dolby_bass"
            android:title="@string/dolby_bass_enhancer" />

        <co.aospa.dolby.preference.DolbySliderPreference
            android:key="dolby_bass_level"
            android:title="@string/dolby_bass_level"
            android:defaultValue="0" />

        <ListPreference
            android:key="dolby_bass_curve"
            android:entries="@array/dolby_bass_curve_entries"
            android:entryValues="@array/dolby_bass_curve_values"
            android:title="@string/dolby_bass_curve"
            android:summary="%s" />

        <SwitchPreferenceCompat
            android:key="dolby_mid"
            android:title="@string/dolby_mid_enhancer" />

        <co.aospa.dolby.preference.DolbySliderPreference
            android:key="dolby_mid_level"
            android:title="@string/dolby_mid_level"
            android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="dolby_treble"
            android:title="@string/dolby_treble_enhancer" />

        <co.aospa.dolby.preference.DolbySliderPreference
            android:key="dolby_treble_level"
            android:title="@string/dolby_treble_level"
            android:defaultValue="0" />

        <SwitchPreferenceCompat
            android:key="dolby_volume"
            android:title="@string/dolby_volume_leveler" />

        <Preference
            android:key="dolby_reset"
            android:title="@string/dolby_reset_profile" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="dolby_category_adv_settings"
        android:title="@string/dolby_category_adv_settings">

        <SwitchPreferenceCompat
            android:key="dolby_device_state_memory"
            android:title="@string/dolby_device_state_memory_title"
            android:summary="@string/dolby_device_state_memory_summary" />

    </PreferenceCategory>

</PreferenceScreen>
